# film_rating

./: README.md  manage.py  pyproject.toml  requirements.txt
film_rating/: asgi.py  settings.py  urls.py  views.py  wsgi.py
film_rating/models/: clf.pkl  label_encoder.pkl  model.py  reg.pkl  vectorizer.pkl
film_rating/notebooks/: aclImdb_clf.ipynb  prediction.ipynb
film_rating/templates/: index.html  result.html
