[tool.poetry]
name = "pyproject.toml"
version = "0.1.0"
description = ""
authors = ["kennythecanary <shirke@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^23.0.0"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
