[tool.poetry]
name = "pyproject.toml"
version = "0.1.0"
description = ""
authors = ["kennythecanary <shirke@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pip = "24.2"
gunicorn = "^23.0.0"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"
asgiref = "3.8.1"
catboost = "1.2.7"
contourpy = "1.3.0"
cycler = "0.12.1"
Django = "5.1.2"
fonttools = "4.54.1"
graphviz = "0.20.3"
joblib = "1.4.2"
kiwisolver = "1.4.7"
matplotlib = "3.9.2"
numpy = "1.26.4"
packaging = "24.1"
pandas = "2.2.3"
pillow = "11.0.0"
plotly = "5.24.1"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
scikit-learn = "1.5.2"
scipy = "1.14.1"
six = "1.16.0"
sqlparse = "0.5.1"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
